--- a/eCommerce.API/Dockerfile
+++ b/eCommerce.API/Dockerfile
@@ -4,8 +4,8 @@
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER $APP_UID
 WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
+EXPOSE 9090
+EXPOSE 9091
 
 
 # This stage is used to build the service project
@@ -27,4 +27,6 @@ RUN dotnet publish "./eCommerce.API.csproj" -c $BUILD_CONFIGURATION -o /app/publ
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+ENV CONNECTIONSTRINGS_DEFAULTCONNECTION_USERS="Host=ecommerceusers.postgres.database.azure.com; Port=5432; Database=eCommerceUsers; Username=postgresadmin; Password=I@mthebest10"
+
 ENTRYPOINT ["dotnet", "eCommerce.API.dll"]
