--- a/eCommerce.API/appsettings.json
+++ b/eCommerce.API/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgresConnection": "Host=localhost; Port=5432; Database=eCommerceUsers; Username=postgres; Password=admin"
+    "PostgresConnection": "",
+    "ISLOCAL": "1"
   }
 }
